--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
