--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@sindresorhus/slugify": "^1.1.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.8",
     "contentful-management": "^6.2.0",
     "next": "latest",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.4.0",
     "react-breadcrumbs-dynamic": "^1.2.1",
@@ -26,7 +28,7 @@
     "react-id-swiper": "^4.0.0",
     "react-lightgallery": "^0.9.0",
     "react-meta-tags": "^0.7.4",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.1",
     "react-toast-notifications": "^2.4.0",
