--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-redux-thunk",
-  "version": "1.0.0",
+  "name": "sanaa-kayum",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
