--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.29.0",
     "ssr-window": "^2.0.0",
     "swiper": "^6.3.5",
+    "swr": "^0.3.8",
     "uuid": "^3.3.3"
   },
   "license": "MIT"
