--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.8",
     "contentful-management": "^6.2.0",
+    "jdown": "^1.0.4",
     "next": "latest",
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
