redirect url change

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_ENDPOINT=https://secure.paytabs.com/payment/request
 NEXT_PUBLIC_CLK=CKKMDM-GTBHH9-KHPRVQ-TNP67K
 NEXT_PUBLIC_SVK=S2JNLLZB2Z-HZKH9RWNMB-6G6D9MNTG6
 NEXT_PUBLIC_NETLIFY_AUTH_TOKEN=F8aRxlIOFiVM9JXXJBC4hdcOpu6FPoYuylLhcJtCUmE
+NEXT_PUBLIC_CALLBACK_URL=https://sanaa-kayum.netlify.app/cart
