Payment API Integration

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "next start -p 3000",
     "postbuild": "next-on-netlify"
   },
-  "proxy": "http://localhost:3000",
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@sindresorhus/slugify": "^1.1.0",
@@ -15,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.8",
     "contentful-management": "^6.2.0",
+    "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jdown": "^1.0.4",
@@ -27,6 +27,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.4.0",
     "react-breadcrumbs-dynamic": "^1.2.1",
+    "react-cookie": "^4.0.3",
     "react-country-region-selector": "^3.0.1",
     "react-device-detect": "^1.14.0",
     "react-document-meta": "^3.0.0-beta.2",
@@ -51,6 +52,7 @@
     "ssr-window": "^2.0.0",
     "swiper": "^6.3.5",
     "swr": "^0.3.8",
+    "universal-cookie-express": "^4.0.3",
     "uuid": "^3.3.3"
   },
   "license": "MIT"
