--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.0.2",
     "jdown": "^1.0.4",
+    "localforage": "^1.9.0",
     "next": "latest",
+    "next-offline": "^5.0.3",
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
     "nextjs-cors": "^1.0.1",
