--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
     "nextjs-cors": "^1.0.1",
+    "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "react": "^16.9.0",
