--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hooks-paginator": "^0.4.4",
     "react-id-swiper": "^4.0.0",
     "react-lightgallery": "^0.9.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-meta-tags": "^0.7.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
