--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@sindresorhus/slugify": "^1.1.0",
     "animate.css": "^4.1.1",
+    "antd": "^4.8.5",
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.8",
     "contentful-management": "^6.2.0",
