--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.1",
+    "react-shimmer": "^2.0.0",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
