--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "react-lightgallery": "^0.9.0",
     "react-loading-skeleton": "^2.1.1",
     "react-meta-tags": "^0.7.4",
+    "react-owl-carousel3": "^2.2.5",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.1",
     "react-shimmer": "^2.0.0",
+    "react-slick": "^0.27.13",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -62,6 +65,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
+    "slick-carousel": "^1.8.1",
     "ssr-window": "^2.0.0",
     "swiper": "^6.3.5",
     "swr": "^0.3.8",
