--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.9",
+    "@material-ui/core": "^4.11.2",
     "@sindresorhus/slugify": "^1.1.0",
     "animate.css": "^4.1.1",
     "antd": "^4.8.5",
