--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p 3000",
-    "postbuild": "next-sitemap && next-on-netlify",
+    "postbuild": "next-sitemap ",
     "export": "next export"
   },
   "dependencies": {
